<resources>

    <!-- Application -->
    <string name="app_name">HunGrr</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="facebook_app_id">1770695576497114</string>

    <!-- Splash Activity -->
    <string name="title_activity_splash">Splash Screen</string>
    <string name="lbl_app_description_message">Para saciar al monstruo que llevas dentro\n</string>
    <string name="splash_footer">Hecho con amor por <b>SnotSoft</b></string>

    <!-- Login Activity -->
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_non_existing_user">This username does not exist</string>
    <string name="error_password_not_match">Invalid password for this username</string>
    <string name="error_invalid_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="lbl_btn_login">Login</string>
    <string name="lbl_btn_logout">Cerrar sesión</string>
    <string name="lbl_main_message">Current session</string>
    <string name="lbl_welcome_message">Bienvenido</string>
    <string name="lbl_loading_message">Cargando...</string>
    <string name="empty_data_message">Empty Fields</string>
    <string name="error_failed_login">Error al iniciar sesión</string>
    <string name="lbl_username_prefix"><b>"Username: "</b></string>
    <string name="lbl_password_hint">Contraseña</string>
    <string name="lbl_username_hint">Nombre de Usuario</string>
    <string name="lbl_no_account_yet">¿Aún no tienes cuenta? Regístrate</string>

    <!-- Register Activity -->
    <string name="title_activity_register">Registrarse</string>
    <string name="lbl_username_hint_">Nombre de usuario</string>
    <string name="lbl_email_hint">Correo electrónico</string>
    <string name="lbl_password_hint_">Contraseña</string>
    <string name="lbl_repeat_password_hint">Volver a ingresar la constraseña</string>
    <string name="lbl_gender_hint">Género</string>
    <string name="lbl_alredy_account">¿Ya tienes cuenta?</string>
    <string name="lbl_login">Iniciar Sesión</string>
    <string name="username_already_taken_message">Nombre de usuario ocupado</string>
    <string name="email_already_in_use_message">Ya existen una cuenta con ese correo electrónico</string>

    <!-- Main Activity-->
    <string name="lbl_btn_login_hint">Iniciar Sesión</string>
    <string name="lbl_btn_register_hint">Registrarse</string>
    <string name="title_activity_restaunrant_list">RestaunrantList</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_restaurant_profile">RestaurantProfile</string>

    <!-- Main Drawer Activity -->
    <string name="title_activity_main_drawer">Principal</string>
    <string name="menu_item_search">Explorar</string>
    <string name="menu_item_favorites">Favoritos</string>
    <string name="menu_item_settings">Configuración</string>
    <string name="menu_item_logout">Cerrar Sesión</string>
    <string name="menu_item_about_hungrr">Acerca de HunGrr</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="lbl_register">Registrarse</string>
    <string name="lbl_logout">Cerrar Sesión</string>
    <string name="lbl_logout_dialog_message">¿Estás seguro de cerrar sesión? Lamentamos verte partir</string>


    <!--Hungry Level Activity-->
    <string name="lbl_hungry">Hambre</string>
    <string name="lbl_hungry_level">¿Cúanta hambre tienes?</string>
    <string name="lbl_btn_explorer">Explorar opciones</string>
    <string name="lbl_btn_see_restaurants">Ver restaurantes</string>
    <string name="lbl_btn_give_me_combinations">¡Dame combinaciones!</string>
    <string name="title_activity_budget">BudgetActivity</string>

    <!-- Budget Activity-->
    <string name="lbl_budget">Presupuesto</string>
    <string name="lbl_budget_description">Determina cuanto dinero puedes gastar</string>
    <string name="lbl_btn_search_options">Buscar opciones</string>
    <string name="lbl_min_budget">MX$100</string>
    <string name="lbl_max_budget">MX$1030</string>
    <string name="title_activity_location">LocationActivity</string>

    <!-- Location Activity-->
    <string name="lbl_location">Ubicación</string>
    <string name="lbl_location_description">Te ofreceremos resultados de restaurantes cercanos a la ubicación que especifiques</string>
    <string name="lbl_btn_location">Usar ubicación actual</string>
    <string name="lbl_btn_other_location">Elegir otra ubicación</string>
    <string name="lbl_cancel">Cancelar</string>
    <string name="title_activity_maps">Map</string>
    <string name="lbl_choose_new_location">Elegir ubicación</string>
    <string name="lbl_facebook_signup">Iniciar Sesión con Facebook</string>
    <string name="lbl_name_hint">Nombre</string>
    <string name="lbl_last_name_hint">Apellido</string>

    <!-- Adapter menu-->
    <string name="lbl_btn_view_menu">Ver menu</string>
    <string name="lbl_tx_menu">Menu</string>
    <string name="menu_item_location">Ubicación</string>
    <string name="menu_item_hungry_level">Nivel de hambre</string>
    <string name="menu_item_budget">Presupuesto</string>


    <string name="lbl_btn_arm_combo">Arma un Combo</string>
    <string name="mark_as_favorite">Agregado a favoritos</string>
    <string name="unmark_as_favorite">Eliminado de favoritos</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_call">Llamar</string>

</resources>
