<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_item_search"
        android:checkableBehavior="single">
        <item android:id="@+id/menu_paired"
            android:icon="@drawable/ic_action_search"
            android:title="@string/menu_item_search" />

        <item android:id="@+id/menu_item_favorites"
            android:icon="@drawable/ic_action_search"
            android:title="@string/menu_item_favorites" />
    </group>

    <item android:title="@string/menu_item_settings">
        <menu>
            <group
                android:id="@+id/menu_item_group_second"
                android:checkableBehavior="single">

                <item
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/menu_item_logout"
                    android:icon="@drawable/ic_action_search"
                    android:title="@string/menu_item_logout"
                    app:showAsAction="always" />

                <item
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/menu_item_about_hungrr"
                    android:icon="@drawable/ic_action_search"
                    android:title="@string/menu_item_about_hungrr"
                    app:showAsAction="always" />

            </group>

        </menu>
    </item>

</menu>