<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        0<EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/colorBlack"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:hint="@string/lbl_username_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/usernameWrapper">

        <EditText
            android:id="@+id/password"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/lbl_password_hint"
            android:background="@null"
            android:clickable="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorGreen"
        android:textColor="@android:color/white"
        android:text="@string/lbl_btn_login"/>

    <TextView android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/lbl_no_account_yet"
        android:gravity="center"
        android:textSize="16sp"/>

</LinearLayout>

