<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".utils.SplashActivity">

    <!--<ImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dip"
        android:layout_height="250dip"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_launcher" />-->

    <TextView
        android:id="@+id/splash_message"
        android:text="@string/lbl_welcome_message"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextIcons"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/splash_app_description_message"
        android:text="@string/lbl_app_description_message"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:textColor="@color/colorTextIcons"
        android:gravity="center"
        android:layout_below="@+id/splash_message"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="12dp"
        android:textColor="@color/colorTextIcons"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/splash_footer" />

</RelativeLayout>
