<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:drawableLeft="@mipmap/ic_account"
                android:background="@null"
                android:hint="@string/lbl_name_hint"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:drawableLeft="@mipmap/ic_account"
                android:background="@null"
                android:hint="@string/lbl_last_name_hint"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:drawableLeft="@mipmap/ic_email"
                android:background="@null"
                android:hint="@string/lbl_email_hint"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:drawableLeft="@mipmap/ic_account"
                android:background="@null"
                android:hint="@string/lbl_username_hint"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:drawableLeft="@mipmap/ic_key"
                android:background="@null"
                android:hint="@string/lbl_password_hint_"
                android:textSize="15sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:drawableLeft="@mipmap/ic_key"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/lbl_repeat_password_hint"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <!--
        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/GenderSpinnerStyle"/>
            -->

    </LinearLayout>

    <include
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_already_account_bottom_bar" />

</RelativeLayout>