<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:background="@color/colorTextIcons">

    <LinearLayout
        android:id="@+id/imageHolder"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/ic_action_logout_white"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageHolder"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/lbl_logout_dialog_message"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_logout"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/colorTextIcons"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignTop="@+id/btn_cancel"
        android:layout_alignRight="@+id/text_dialog"
        android:layout_alignEnd="@+id/text_dialog" />
    <!--android:background="@drawable/btn_flat_red_selector"-->

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="4dp"
        android:text="@string/lbl_cancel"
        android:textAllCaps="true"
        android:gravity="center_vertical"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_below="@+id/text_dialog"
        android:layout_toLeftOf="@+id/btn_confirmation"
        android:layout_toStartOf="@+id/btn_confirmation" />

</RelativeLayout>
